[project]
name = "vol-reg-ai_notebooks"
version = "0.1.0"
description = "Notebooks for the VolRegimeAI project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "pandas-ta>=0.4.71b0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
    "yfinance>=1.2.1",
]
